--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "keywords": [
     "cli"
   ],
-  "author": "xing.org1",
+  "author": {
+		"name": "xing.org1",
+		"url": "https://github.com/xingorg1"
+	},
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
