--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gjf-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Command line interface for development",
   "bin": {
     "gjf-cli": "./bin/gjf"
@@ -19,9 +19,9 @@
     "cli"
   ],
   "author": {
-		"name": "xing.org1",
-		"url": "https://github.com/xingorg1"
-	},
+    "name": "xing.org1",
+    "url": "https://github.com/xingorg1"
+  },
   "license": "ISC",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -46,6 +46,7 @@
     "minimist": "^1.2.5",
     "ncp": "^2.0.0",
     "ora": "^5.4.1",
+    "read-pkg": "^6.0.0",
     "semver": "^7.3.5",
     "validate-npm-package-name": "^3.0.0"
   },
