--- a/package.json
+++ b/package.json
@@ -39,16 +39,21 @@
     "chalk": "^4.1.1",
     "commander": "^8.0.0",
     "download-git-repo": "^3.0.2",
+    "ejs": "^3.1.6",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
+    "globby": "^11.0.4",
     "inquirer": "^8.1.2",
+    "isbinaryfile": "^4.0.8",
     "lodash.clonedeep": "^4.5.0",
     "minimist": "^1.2.5",
     "ncp": "^2.0.0",
     "ora": "^5.4.1",
     "read-pkg": "^6.0.0",
     "semver": "^7.3.5",
-    "validate-npm-package-name": "^3.0.0"
+    "slash": "^3.0.0",
+    "validate-npm-package-name": "^3.0.0",
+    "yaml-front-matter": "^4.1.1"
   },
   "engines": {
     "node": "^12.0.0 || >= 14.0.0"
